# interactive-brokers-flex-rs

./: .gitignore  .ledgerrc-x  CHANGELOG.md  Cargo.toml  README.md  config.toml  ibflex.toml  run.cmd  sample_ibflex.toml
src/: cli.rs  cli_runner.rs  compare.rs  config.rs  download.rs  flex_enums.rs  flex_maps.rs  flex_query.rs  flex_query_def.rs  flex_query_parser.rs  flex_query_reader.rs  flex_reader.rs  flex_statement.rs  ib_cash_tx_converter.rs  ib_flex_parser.rs  ledger_print_output_parser.rs  ledger_reg_output_parser.rs  ledger_runner.rs  lib.rs  main.rs  model.rs  test_fixtures.rs
tests/: app_tests.rs  comparison_tests.rs  config_tests.rs  dir.lit  flex_report_parser_tests.rs  functional_tests.rs  in-lieu.ledger  in-lieu.xml  init.ledger  journal.ledger  reg.lit  report_1.xml  same_symbol.ledger  same_symbol.xml  symbols.csv  tax_adj.ledgerrc  tax_adj_journal.ledger  tax_adj_report.xml  tcf.ledger  tcf.toml  tcf.xml  test.lit  txs.lit
