[package]
name = "ibflex"
description = "A library and a CLI for reading Interactive Brokers Flex reports and comparing to Ledger-cli transactions"
version = "0.7.0"
edition = "2021"
authors = ["Alen Šiljak <dev@alensiljak.eu.org>"]
license = 'GPL-3.0-or-later'
repository = 'https://github.com/alensiljak/interactive-brokers-flex-rs'

categories = ['command-line-utilities', 'finance']
keywords = ["interactivebrokers", "finance", "cli", "flex", "reports"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
as-symbols = "0.4.2"
assert_cmd = "2.0.8"
chrono = "0.4.23"
clap = { version = "4.1.4", features = ["derive"] }
cli_runner = "0.2.1"
confy = "0.5.1"
env_logger = "0.10.0"
glob = "0.3.1"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["json"] }
rust_decimal = "1.28.0"
serde = { version = "1.0.151", features = ["derive"] }
serde-xml-rs = "0.6.0"
shell-words = "1.1.0"
tokio = { version="1.24.2", features=["rt-multi-thread", "macros"] }

[dev-dependencies]
rstest = "0.16.0"
test-log = "0.2.11"
