[package]
name = "ibflex"
description = "A library and a CLI for reading Interactive Brokers Flex reports and comparing to Ledger-cli transactions"
version = "1.4.2"
edition = "2021"
authors = ["Alen Šiljak"]
license = 'GPL-3.0-or-later'
repository = 'https://github.com/alensiljak/interactive-brokers-flex-rs'

categories = ['command-line-utilities', 'finance']
keywords = ["interactivebrokers", "finance", "cli", "flex", "reports"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
as-symbols = "^0.5.0"
chrono = "0.4.31"
clap = { version = "4.4.4", features = ["derive"] }
env_logger = "^0.11.10"
glob = "^0.3.1"
log = "^0.4.20"
rust_decimal = "^1.32.0"
serde = { version = "^1.0.188", features = ["derive"] }
quick-xml = { version = "^0.37", features = ["serialize"] }
shell-words = "^1.1.0"
ureq = "2"

[dev-dependencies]
assert_cmd = "2.0.12"
rstest = "^0.26.1"
test-log = "^0.2.11"
